fix : [정보공유] 카테고리 영문코드 호출 - 통합테스트 실패 사항 수정 (#198)
*정보공유 등록 첫 페이지 진입시 사용할 수 있는 카테고리 조회 API 생성
    * API controller 단위 테스트
    * infoCategoryDto와 docs 생성

* 정보공유 상세 (=수정) 시에 필요한 카테고리 영문명 추가
   * 통합테스트 변수명 수정